fixed alignment

--- a/purple_interface.css
+++ b/purple_interface.css
@@ -1,30 +1,22 @@
-/*
-    assumed HTML:
-
-
-
-
- */
-
 body {
     margin: 0;
 }
 
 body, button, .button {
-    font-family: 'Roboto';
+    font-family: 'Roboto', serif;
 }
 
 header h1 {
     padding-left: 1em;
 }
 
-navigation {
+.navigation {
     margin: 0;
     background: #7a6490;
     display: flex;
 }
 
-navigation, section {
+.navigation, section {
     padding: 10px;
 }
 
@@ -67,25 +59,23 @@ section * {
     position: absolute;
     box-sizing: border-box;
     overflow-y: auto;
-
-    z-index: 1;
-
-    width: 70%;
     margin-left: 15%;
     margin-top: 10vh;
+
+    z-index: 1;
+    width: 70%;
     height: 80vh;
 
     background: rgba(240, 234, 251, 0.95);
     border: 1px solid #341aa7;
     border-radius: 4px;
-    box-shadow: 0px 0px 5px black;
-
     text-align: justify;
-
     display: none;
 }
 
 .modal h2 {
+    position: sticky;
+    top: 0;
     margin: 0;
     padding: 1em;
     background: rgb(202, 190, 247);
@@ -102,10 +92,12 @@ section * {
 }
 
 .modal_overlay {
-    position: absolute;
+    position: fixed;
+    top: 0;
     width: 100vw;
-    height: 97vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
     display: none;
+    background: #00000050;
 }
